# sybil-detection-api

./: .env.example  .gitignore  README.md  inspector-response.json  logs.md  pyproject.toml  requirements.txt  skills-lock.json
.agents/plans/: 2026-03-25-backend-api-standardization.md  modal_worker_implementation_plan.md  module2_backend_implementation_plan.md
.agents/tasks/: 2026-03-25-backend-api-standardization.md  add-node-attributes.prompt.md  deepdive-module1-docs.prompt.md  document-module1-workflow.prompt.md  expand-gat-attention-depth-2.prompt.md  extract-gat-attention.prompt.md  fix-dimension-396d.prompt.md  fix-edge-attr-leak.prompt.md  fix-gat-attention-mapping.prompt.md  fix-graph-backbone-edges.prompt.md  fix-label-mapping.prompt.md  fix-modal-aio-syntax.prompt.md  fix-modal-async-warning.prompt.md  fix-modal-deps-and-auth.prompt.md  fix-modal-lookup.prompt.md  fix-module1-docs.prompt.md  fix-node-attributes-leak.prompt.md  fix-sim-bio-global-search.prompt.md  fix-transformers-version.prompt.md  hotfix-sybil-probability.prompt.md  implement-modal-task1.prompt.md  implement-modal-task2.prompt.md  implement-modal-worker.prompt.md  implement-module1-api.prompt.md  implement-service.prompt.md  integrate-bio-embeddings.prompt.md  integrate-metadata-parser.prompt.md  (+20 more)
app/: database.py  main.py
app/core/: __init__.py  (+2 more)
data/: best_gat_model.pth  kmeans_labels.csv  random_forest_gat.pkl  rule_based_scoring_labels.csv  scaler_gat_ml.pkl
docs/: module1_detailed_workflow.md  module1_workflow.md  module2_detailed_workflow.md
modal_worker/: app.py  modal_app.py
(+23 files in other folders)
